--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
 
   main
     .jumbotron
-      h1 SteemConnect Node.js Foxon
-      p This project aims to kick-start your STEEM based project.
+      h1 Decentralized Blockchain Porn Using Steem and IPFS
+      p DPorn is part of the decentralized future
       a.btn.btn-dark(href="/feed/trending") View Trending
       a.btn.btn-primary(href="/auth") Login With SteemConnect
