--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -1,11 +1,13 @@
 nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
-  a.navbar-brand(href="/") DPornAlpha
+    .nav-logo
+      a.navbar-brand(href="/")
+        img(height="55px" src="/imgs/dpornsitelogo.png")
     .navbar-nav
       a.nav-item.nav-link(href="/feed/trending") Trending
       a.nav-item.nav-link(href="/feed/created") New
     .navbar-nav.ml-auto
       if user
-        a.nav-item.nav-link.btn.btn-outline-secondary(href="/post") Create Post
+        a.nav-item.nav-link.btn.btn-outline-secondary(href="/post") Upload
         a.nav-item.nav-link(href="/auth/logout") Logout
       else
         a.btn.btn-primary(href="/auth") Login With SteemConnect
