--- a/views/feed.pug
+++ b/views/feed.pug
@@ -6,7 +6,7 @@ block content
   main.feed(data-feed-type=`${feed}` data-username=`${username}` data-tag=`${tag}` data-posts=`${posts}`)
     .container
       if feed != 'user-feed'
-        .row: h2= feed + ' ' + tag + ' ' + 'videos'
+        .row: h2= feed + ' ' + tag + ' ' + 'porn'
       else
         .row
          // h2= 'Hey ' + username + ' 👋'
