--- a/views/single.pug
+++ b/views/single.pug
@@ -3,5 +3,5 @@ extends layout
 block content
   include partials/nav
 
-  main.container-fluid.single(data-username=`${username}` data-permlink=`${permlink}` data-category=`${category}` data-videohashstr=`${videohashstr}` data-activeuser=`${activeuser}`)
+  main.container-fluid.single(data-username=`${username}` data-permlink=`${permlink}` data-category=`${category}` data-videohashstr=`${videohashstr}` data-activeuser=`${activeuser}` data-value=`${value}`)
   
