--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -5,6 +5,7 @@ nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
     .navbar-nav
       a.nav-item.nav-link(href="/feed/trending") Trending
       a.nav-item.nav-link(href="/feed/created") New
+      a.nav-item.nav-link(href="/tags") Tag
     .navbar-nav.ml-auto
       if user
         a.nav-item.nav-link.btn.btn-outline-secondary(href="/post") Upload
